// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getBarrelFiles > mode 'all' should produce wildcard exports and mark barrel sources indexable/exportable 1`] = `
[
  {
    "baseName": "index.ts",
    "exports": [
      {
        "isTypeOnly": undefined,
        "name": undefined,
        "path": "./a.ts",
      },
      {
        "isTypeOnly": undefined,
        "name": undefined,
        "path": "./sub/sub2/b.ts",
      },
      {
        "isTypeOnly": undefined,
        "name": undefined,
        "path": "./sub/d.ts",
      },
      {
        "isTypeOnly": true,
        "name": undefined,
        "path": "./sub/d.ts",
      },
      {
        "isTypeOnly": undefined,
        "name": undefined,
        "path": "./sub/index.ts",
      },
      {
        "isTypeOnly": undefined,
        "name": undefined,
        "path": "./sub/index.ts",
      },
    ],
    "path": "src/index.ts",
    "sources": [
      {
        "isExportable": true,
        "isIndexable": true,
        "isTypeOnly": undefined,
        "name": "A",
        "value": "",
      },
      {
        "isExportable": true,
        "isIndexable": true,
        "isTypeOnly": undefined,
        "name": "b",
        "value": "",
      },
      {
        "isExportable": true,
        "isIndexable": true,
        "isTypeOnly": undefined,
        "name": "D",
        "value": "",
      },
      {
        "isExportable": true,
        "isIndexable": true,
        "isTypeOnly": true,
        "name": "E",
        "value": "",
      },
      {
        "isExportable": true,
        "isIndexable": true,
        "isTypeOnly": undefined,
        "name": "world",
        "value": "",
      },
      {
        "isExportable": true,
        "isIndexable": true,
        "isTypeOnly": undefined,
        "name": "hello",
        "value": "",
      },
    ],
  },
  {
    "baseName": "index.ts",
    "exports": [
      {
        "isTypeOnly": undefined,
        "name": undefined,
        "path": "./sub2/b.ts",
      },
      {
        "isTypeOnly": undefined,
        "name": undefined,
        "path": "./d.ts",
      },
      {
        "isTypeOnly": true,
        "name": undefined,
        "path": "./d.ts",
      },
      {
        "isTypeOnly": undefined,
        "name": undefined,
        "path": "./index.ts",
      },
      {
        "isTypeOnly": undefined,
        "name": undefined,
        "path": "./index.ts",
      },
    ],
    "path": "src/sub/index.ts",
    "sources": [
      {
        "isExportable": true,
        "isIndexable": true,
        "isTypeOnly": undefined,
        "name": "b",
        "value": "",
      },
      {
        "isExportable": true,
        "isIndexable": true,
        "isTypeOnly": undefined,
        "name": "D",
        "value": "",
      },
      {
        "isExportable": true,
        "isIndexable": true,
        "isTypeOnly": true,
        "name": "E",
        "value": "",
      },
      {
        "isExportable": true,
        "isIndexable": true,
        "isTypeOnly": undefined,
        "name": "world",
        "value": "",
      },
      {
        "isExportable": true,
        "isIndexable": true,
        "isTypeOnly": undefined,
        "name": "hello",
        "value": "",
      },
    ],
  },
  {
    "baseName": "index.ts",
    "exports": [
      {
        "isTypeOnly": undefined,
        "name": undefined,
        "path": "./b.ts",
      },
    ],
    "path": "src/sub/sub2/index.ts",
    "sources": [
      {
        "isExportable": true,
        "isIndexable": true,
        "isTypeOnly": undefined,
        "name": "b",
        "value": "",
      },
    ],
  },
]
`;

exports[`getBarrelFiles > mode 'named' should produce named exports and mark barrel sources indexable/exportable 1`] = `
[
  {
    "baseName": "index.ts",
    "exports": [
      {
        "isTypeOnly": undefined,
        "name": [
          "A",
        ],
        "path": "./a.ts",
      },
      {
        "isTypeOnly": undefined,
        "name": [
          "b",
        ],
        "path": "./sub/sub2/b.ts",
      },
      {
        "isTypeOnly": undefined,
        "name": [
          "D",
        ],
        "path": "./sub/d.ts",
      },
      {
        "isTypeOnly": true,
        "name": [
          "E",
        ],
        "path": "./sub/d.ts",
      },
      {
        "isTypeOnly": undefined,
        "name": [
          "world",
        ],
        "path": "./sub/index.ts",
      },
      {
        "isTypeOnly": undefined,
        "name": [
          "hello",
        ],
        "path": "./sub/index.ts",
      },
    ],
    "path": "src/index.ts",
    "sources": [
      {
        "isExportable": true,
        "isIndexable": true,
        "isTypeOnly": undefined,
        "name": "A",
        "value": "",
      },
      {
        "isExportable": true,
        "isIndexable": true,
        "isTypeOnly": undefined,
        "name": "b",
        "value": "",
      },
      {
        "isExportable": true,
        "isIndexable": true,
        "isTypeOnly": undefined,
        "name": "D",
        "value": "",
      },
      {
        "isExportable": true,
        "isIndexable": true,
        "isTypeOnly": true,
        "name": "E",
        "value": "",
      },
      {
        "isExportable": true,
        "isIndexable": true,
        "isTypeOnly": undefined,
        "name": "world",
        "value": "",
      },
      {
        "isExportable": true,
        "isIndexable": true,
        "isTypeOnly": undefined,
        "name": "hello",
        "value": "",
      },
    ],
  },
  {
    "baseName": "index.ts",
    "exports": [
      {
        "isTypeOnly": undefined,
        "name": [
          "b",
        ],
        "path": "./sub2/b.ts",
      },
      {
        "isTypeOnly": undefined,
        "name": [
          "D",
        ],
        "path": "./d.ts",
      },
      {
        "isTypeOnly": true,
        "name": [
          "E",
        ],
        "path": "./d.ts",
      },
      {
        "isTypeOnly": undefined,
        "name": [
          "world",
        ],
        "path": "./index.ts",
      },
      {
        "isTypeOnly": undefined,
        "name": [
          "hello",
        ],
        "path": "./index.ts",
      },
    ],
    "path": "src/sub/index.ts",
    "sources": [
      {
        "isExportable": true,
        "isIndexable": true,
        "isTypeOnly": undefined,
        "name": "b",
        "value": "",
      },
      {
        "isExportable": true,
        "isIndexable": true,
        "isTypeOnly": undefined,
        "name": "D",
        "value": "",
      },
      {
        "isExportable": true,
        "isIndexable": true,
        "isTypeOnly": true,
        "name": "E",
        "value": "",
      },
      {
        "isExportable": true,
        "isIndexable": true,
        "isTypeOnly": undefined,
        "name": "world",
        "value": "",
      },
      {
        "isExportable": true,
        "isIndexable": true,
        "isTypeOnly": undefined,
        "name": "hello",
        "value": "",
      },
    ],
  },
  {
    "baseName": "index.ts",
    "exports": [
      {
        "isTypeOnly": undefined,
        "name": [
          "b",
        ],
        "path": "./b.ts",
      },
    ],
    "path": "src/sub/sub2/index.ts",
    "sources": [
      {
        "isExportable": true,
        "isIndexable": true,
        "isTypeOnly": undefined,
        "name": "b",
        "value": "",
      },
    ],
  },
]
`;
